[gd_scene load_steps=11 format=3 uid="uid://cxv52iq086825"]

[ext_resource type="Script" path="res://Enemies/Core.gd" id="1_5cmpx"]
[ext_resource type="Texture2D" uid="uid://bmlk5lijhay2j" path="res://icon.svg" id="2_hd8lo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqeds"]
size = Vector2(19, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h3pgu"]
size = Vector2(270, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1uilb"]
size = Vector2(92, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dw5c"]
size = Vector2(150, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_djxep"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hd8lo")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hd8lo")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_51em2"]
size = Vector2(20, 8.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtho2"]
size = Vector2(14, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_quk6y"]
size = Vector2(22, 18)

[node name="Core" type="CharacterBody2D"]
script = ExtResource("1_5cmpx")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gqeds")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="Area" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -18.5)
shape = SubResource("RectangleShape2D_h3pgu")

[node name="Area2" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-89, 32)
shape = SubResource("RectangleShape2D_1uilb")

[node name="Area3" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(89, 32)
shape = SubResource("RectangleShape2D_1uilb")

[node name="Area4" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -59)
shape = SubResource("RectangleShape2D_3dw5c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.5, -2.38419e-07)
scale = Vector2(0.132813, 0.125)
sprite_frames = SubResource("SpriteFrames_djxep")
animation = &"Death"

[node name="AreaHitbox" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="AreaHitbox"]
position = Vector2(0, -4.25)
shape = SubResource("RectangleShape2D_51em2")

[node name="LeftPlatformChecker" type="Area2D" parent="."]

[node name="Left" type="CollisionShape2D" parent="LeftPlatformChecker"]
position = Vector2(-22, 16)
shape = SubResource("RectangleShape2D_wtho2")

[node name="RightPlatformChecker" type="Area2D" parent="."]

[node name="Right" type="CollisionShape2D" parent="RightPlatformChecker"]
position = Vector2(22, 16)
shape = SubResource("RectangleShape2D_wtho2")

[node name="HurtPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtPlayer"]
shape = SubResource("RectangleShape2D_quk6y")

[node name="ChaseAgain" type="Timer" parent="."]

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="AreaHitbox" to="." method="_on_area_hitbox_body_entered"]
[connection signal="body_exited" from="LeftPlatformChecker" to="." method="_on_left_platform_checker_body_exited"]
[connection signal="body_exited" from="RightPlatformChecker" to="." method="_on_right_platform_checker_body_exited"]
[connection signal="body_entered" from="HurtPlayer" to="." method="_on_hurt_player_body_entered"]
[connection signal="timeout" from="ChaseAgain" to="." method="_on_chase_again_timeout"]
